force-app/main/default/objects/Ingredient__c/fields/Available_Potion__c.field-meta.xml
<CustomField>
    <fullName>Available_Potion__c</fullName>
    <inlineHelpText>Select the potion type that this ingredient can be used for</inlineHelpText>
    <label>Available Potion</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Ingredient__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Potion_Types</valueSetName>
    </valueSet>
</CustomField>