force-app/main/default/objects/Ingredient__c/fields/Ingredient_Price__c.field-meta.xml
<CustomField>
    <fullName>Ingredient_Price__c</fullName>
    <label>Ingredient Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>