force-app/main/default/objects/Ingredient__c/fields/Type_of_Ingredient__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Ingredient__c</fullName>
    <label>Type of Ingredient</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>