force-app/main/default/objects/Ingredient__c/validationRules/No_Negative_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Negative_Price</fullName>
    <active>true</active>
    <errorConditionFormula>Ingredient_Price__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Ingredient_Price__c</errorDisplayField>
    <errorMessage>You put a negative number you fool</errorMessage>
</ValidationRule>