force-app/main/default/objects/Ingredient__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Type_of_Ingredient__c</columns>
    <columns>Ingredient_Price__c</columns>
    <columns>Available_Potion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>